--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,10 @@
 {
-    "version":2,
-    "builds":[
-        {
-            "src":"./index.js",
-            "use":"@vercel/node"
-        }
+    "version": 2,
+    "builds": [
+      { "src": "angular.json", "use": "@vercel/static-build" }
     ],
-    "routes":[
-        {
-            "src":"/(.*)",
-            "dest":"/"
-        }
-    ]
-}
+    "scripts": {
+    "build": "ng build --prod"
+  }
+
+  }
