--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,9 @@
     "version": 2,
     "builds": [
       { "src": "angular.json", "use": "@vercel/static-build" }
-    ]
-
+    ],
+    "scripts": {
+    "build": "ng serve"
+  }
 
   }
