--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "vercel": "^34.2.6",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
